feat: reforzar permisos RBAC por módulo, eliminar rol user y centralizar validación de propiedad del doctor
- Eliminar rol "user" de todos los @RolesAllowed en controladores
- Restringir expedientes, recetas y lab a {admin, doctor}; escritura solo doctor
- Restringir farmacéuticas y distribuidores a solo admin
- Agregar validación de propiedad del doctor en operaciones CUD de servicios
- Centralizar validateDoctorOwnership en SecurityContextService

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>